<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/thongtin">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navthongtin"
                    android:title="@string/thongtincanhan"
                    android:icon="@drawable/ic_baseline_notes_24"/>

            </group>
        </menu>
    </item>

    <item
        android:title="@string/hotro">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navphanhoi"
                    android:title="@string/Phanhoi"
                    android:icon="@drawable/ic_baseline_message_24"/>
                <item
                    android:id="@+id/navlienlac"
                    android:title="@string/lienlac"
                    android:icon="@drawable/ic_baseline_call_24"/>
            </group>
        </menu>

    </item>


    <item android:title="@string/dangxuat">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navdangxuat"
                    android:title="@string/dangxuat"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"/>
            </group>
        </menu>
    </item>
</menu>