<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ThongTinSV">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#570087"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:layout_weight="1.5"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/thongtincanhan"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeStepGranularity="25sp"
            android:transitionName="button_QR" />

    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ImageView
            android:id="@+id/img_TTavata"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_doiava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:background="#ffffff"
            android:text="@string/doiavata"
            android:textColor="#C6C4C4"
            android:textSize="10sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeStepGranularity="15sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:orientation="vertical"
        android:background="#ffffff">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tenngdung"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_tenngdung"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ngaysinh"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_ngaysinh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gioitinh"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_gioitinh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/diachi2"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_diachi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_Chagemasv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/masv"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_masv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_class"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lophoc"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#68019F"/>
            <TextView
                android:id="@+id/txt_lophoc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeStepGranularity="20sp"
                android:textColor="#8A8888"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>